@@ -100,7 +100,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
-                <additionalJOptions>--enable-preview</additionalJOptions>
             </plugin>
         </plugins>
     </reporting>
